use port names instead of port numbers in filter expressions
This issue was migrated from bug 594 in our old bug tracker.
Original bug information:
Reporter: Toralf Förster
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: Linux
Platform: x86
Version: Git
Attachments:
spiegel_http.pcap: sniffed http stream
tcp-port.patch: Build value_string array for tcp services.
optimize-system-service-db.patch: Read system service file once.