Provide port names for TCP ports so they can be used in filter expressions.

Bug: 594
Change-Id: Ib41c4c753e24ac78b39463ab1daae7fd00631230
Reviewed-on: https://code.wireshark.org/review/8851
Petri-Dish: Alexis La Goutte <alexis.lagoutte@gmail.com>
Tested-by: Petri Dish Buildbot <buildbot-no-reply@wireshark.org>
Reviewed-by: Michael Mann <mmann78@netscape.net>